# GeometryLib

./: CMakeLists.txt  Circle.cpp  Circle.h  Figure.h  GeometryLib.h  README.md  Triangle.cpp  Triangle.h  constants.h
tests/: Circle_test.cpp  Triangle_test.cpp
